# gitlab-mirror-maker

./: README.md  pyproject.toml
mirrormaker/: github.py  gitlab.py  mirrormaker.py  tqdm.py
tests/: test_mirrormaker.py
